# aisaathi

./: .env.example  .gitignore  AGENTIC_WORKFLOW_README.md  BUGS_RESOLVED.md  DEPLOYMENT.md  ENVIRONMENT_SETUP.md  EXPORT_INSTRUCTIONS.md  MIGRATION_SUMMARY.md  README.md  agentic-workflow.py  agentic_workflow_results.json  cookies.txt  cookies_new.txt  package-lock.json  package.json  pyproject.toml  replit.md  start-agentic-workflow.sh  test-workflow.py
client/src/: App.tsx  index.css
client/src/components/: language-selector.tsx  language-showcase.tsx
client/src/components/dashboard/: activity-feed.tsx  agent-cards.tsx  resource-suggestions.tsx  stats-cards.tsx
client/src/components/layout/: footer.tsx  header.tsx
client/src/lib/: language-utils.ts  offline-storage.ts
client/src/pages/: dashboard.tsx  landing.tsx  login.tsx  not-found.tsx  student-profiles.tsx  teacher-profile.tsx
client/src/pages/agents/: accessibility.tsx  admin.tsx  agentic-workflow.tsx  assessment.tsx  evaluation.tsx  (+4 more)
server/: agentic-workflow-api.py  db.ts  replitAuth.ts  routes.ts  seed.ts  simple-auth.ts  storage.ts
server/services/: assessment-agent.ts  assessment_agent.py  evaluation.py  gemini-bridge.ts  gemini-service.ts  gemini.py  gemini_backup.py  image-analysis-agent.ts  image_analysis_agent.py  lesson-plan-agent.ts  lesson_plan_agent.py  main.py  multilingual-agent.ts  multilingual_agent.py  openai.ts  shared-config.ts  shared_config.py  storyteller-agent.ts  storyteller_agent.py  teaching-aids-agent.ts  teaching_aids_agent.py
shared/: schema.ts  student-profile-schema.ts
